[gd_scene load_steps=16 format=4 uid="uid://oahkdu8jl2l5"]

[ext_resource type="PackedScene" uid="uid://dy2jmabyaai8m" path="res://Scenes/UI/User_Interface/user_interface.tscn" id="2_alos7"]
[ext_resource type="Texture2D" uid="uid://cnqqdk4f3fcw" path="res://Assets/Texture/TX Tileset Grass.png" id="3_o4e7r"]
[ext_resource type="Texture2D" uid="uid://bjon20u4lph6f" path="res://Assets/Texture/TX Tileset Wall.png" id="4_ru0v0"]
[ext_resource type="Texture2D" uid="uid://b7oa2whf61p8g" path="res://Assets/Texture/point and click cursor.png" id="5_42mxi"]
[ext_resource type="Texture2D" uid="uid://hauh51jafug7" path="res://Assets/Texture/red point and click cursor.png" id="6_imvg7"]
[ext_resource type="Script" path="res://Scripts/Core/Layer0.gd" id="7_ufyxm"]
[ext_resource type="PackedScene" uid="uid://66bfojldfelb" path="res://Scenes/Camera/OverviewCamera.tscn" id="8_2nhjv"]
[ext_resource type="Script" path="res://Scripts/Utilities/spawnCharacter.gd" id="9_33mdl"]
[ext_resource type="Script" path="res://Scripts/Utilities/spawnEnemy.gd" id="10_ewhdh"]
[ext_resource type="Script" path="res://Scripts/Core/TurnQueue.gd" id="11_uiy7v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fwg0k"]
texture = ExtResource("3_o4e7r")
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
3:0/0 = 0
3:0/0/custom_data_0 = true
4:0/0 = 0
4:0/0/custom_data_0 = true
5:0/0 = 0
5:0/0/custom_data_0 = true
6:0/0 = 0
6:0/0/custom_data_0 = true
7:0/0 = 0
7:0/0/custom_data_0 = true
8:0/0 = 0
8:0/0/custom_data_0 = true
9:0/0 = 0
9:0/0/custom_data_0 = true
10:0/0 = 0
10:0/0/custom_data_0 = true
11:0/0 = 0
11:0/0/custom_data_0 = true
12:0/0 = 0
12:0/0/custom_data_0 = true
13:0/0 = 0
13:0/0/custom_data_0 = true
14:0/0 = 0
14:0/0/custom_data_0 = true
15:0/0 = 0
15:0/0/custom_data_0 = true
0:1/0 = 0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/custom_data_0 = true
2:1/0 = 0
2:1/0/custom_data_0 = true
3:1/0 = 0
3:1/0/custom_data_0 = true
4:1/0 = 0
4:1/0/custom_data_0 = true
5:1/0 = 0
5:1/0/custom_data_0 = true
6:1/0 = 0
6:1/0/custom_data_0 = true
7:1/0 = 0
7:1/0/custom_data_0 = true
8:1/0 = 0
8:1/0/custom_data_0 = true
9:1/0 = 0
9:1/0/custom_data_0 = true
10:1/0 = 0
10:1/0/custom_data_0 = true
11:1/0 = 0
11:1/0/custom_data_0 = true
12:1/0 = 0
12:1/0/custom_data_0 = true
13:1/0 = 0
13:1/0/custom_data_0 = true
14:1/0 = 0
14:1/0/custom_data_0 = true
15:1/0 = 0
15:1/0/custom_data_0 = true
0:2/0 = 0
0:2/0/custom_data_0 = true
1:2/0 = 0
1:2/0/custom_data_0 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
3:2/0 = 0
3:2/0/custom_data_0 = true
4:2/0 = 0
4:2/0/custom_data_0 = true
5:2/0 = 0
5:2/0/custom_data_0 = true
6:2/0 = 0
6:2/0/custom_data_0 = true
7:2/0 = 0
7:2/0/custom_data_0 = true
8:2/0 = 0
8:2/0/custom_data_0 = true
9:2/0 = 0
9:2/0/custom_data_0 = true
10:2/0 = 0
10:2/0/custom_data_0 = true
11:2/0 = 0
11:2/0/custom_data_0 = true
12:2/0 = 0
12:2/0/custom_data_0 = true
13:2/0 = 0
13:2/0/custom_data_0 = true
14:2/0 = 0
14:2/0/custom_data_0 = true
15:2/0 = 0
15:2/0/custom_data_0 = true
0:3/0 = 0
0:3/0/custom_data_0 = true
1:3/0 = 0
1:3/0/custom_data_0 = true
2:3/0 = 0
2:3/0/custom_data_0 = true
3:3/0 = 0
3:3/0/custom_data_0 = true
4:3/0 = 0
4:3/0/custom_data_0 = true
5:3/0 = 0
5:3/0/custom_data_0 = true
6:3/0 = 0
6:3/0/custom_data_0 = true
7:3/0 = 0
7:3/0/custom_data_0 = true
8:3/0 = 0
8:3/0/custom_data_0 = true
9:3/0 = 0
9:3/0/custom_data_0 = true
10:3/0 = 0
10:3/0/custom_data_0 = true
11:3/0 = 0
11:3/0/custom_data_0 = true
12:3/0 = 0
12:3/0/custom_data_0 = true
13:3/0 = 0
13:3/0/custom_data_0 = true
14:3/0 = 0
14:3/0/custom_data_0 = true
15:3/0 = 0
15:3/0/custom_data_0 = true
0:4/0 = 0
0:4/0/custom_data_0 = true
1:4/0 = 0
1:4/0/custom_data_0 = true
2:4/0 = 0
2:4/0/custom_data_0 = true
3:4/0 = 0
3:4/0/custom_data_0 = true
4:4/0 = 0
4:4/0/custom_data_0 = true
5:4/0 = 0
5:4/0/custom_data_0 = true
6:4/0 = 0
6:4/0/custom_data_0 = true
7:4/0 = 0
7:4/0/custom_data_0 = true
8:4/0 = 0
8:4/0/custom_data_0 = true
9:4/0 = 0
9:4/0/custom_data_0 = true
10:4/0 = 0
10:4/0/custom_data_0 = true
11:4/0 = 0
11:4/0/custom_data_0 = true
12:4/0 = 0
12:4/0/custom_data_0 = true
13:4/0 = 0
13:4/0/custom_data_0 = true
14:4/0 = 0
14:4/0/custom_data_0 = true
15:4/0 = 0
15:4/0/custom_data_0 = true
0:5/0 = 0
0:5/0/custom_data_0 = true
1:5/0 = 0
1:5/0/custom_data_0 = true
2:5/0 = 0
2:5/0/custom_data_0 = true
3:5/0 = 0
3:5/0/custom_data_0 = true
4:5/0 = 0
4:5/0/custom_data_0 = true
5:5/0 = 0
5:5/0/custom_data_0 = true
6:5/0 = 0
6:5/0/custom_data_0 = true
7:5/0 = 0
7:5/0/custom_data_0 = true
8:5/0 = 0
8:5/0/custom_data_0 = true
9:5/0 = 0
9:5/0/custom_data_0 = true
10:5/0 = 0
10:5/0/custom_data_0 = true
11:5/0 = 0
11:5/0/custom_data_0 = true
12:5/0 = 0
12:5/0/custom_data_0 = true
13:5/0 = 0
13:5/0/custom_data_0 = true
14:5/0 = 0
14:5/0/custom_data_0 = true
15:5/0 = 0
15:5/0/custom_data_0 = true
0:6/0 = 0
0:6/0/custom_data_0 = true
1:6/0 = 0
1:6/0/custom_data_0 = true
2:6/0 = 0
2:6/0/custom_data_0 = true
3:6/0 = 0
3:6/0/custom_data_0 = true
4:6/0 = 0
4:6/0/custom_data_0 = true
5:6/0 = 0
5:6/0/custom_data_0 = true
6:6/0 = 0
6:6/0/custom_data_0 = true
7:6/0 = 0
7:6/0/custom_data_0 = true
8:6/0 = 0
8:6/0/custom_data_0 = true
9:6/0 = 0
9:6/0/custom_data_0 = true
10:6/0 = 0
10:6/0/custom_data_0 = true
11:6/0 = 0
11:6/0/custom_data_0 = true
12:6/0 = 0
12:6/0/custom_data_0 = true
13:6/0 = 0
13:6/0/custom_data_0 = true
14:6/0 = 0
14:6/0/custom_data_0 = true
15:6/0 = 0
15:6/0/custom_data_0 = true
0:7/0 = 0
0:7/0/custom_data_0 = true
1:7/0 = 0
1:7/0/custom_data_0 = true
2:7/0 = 0
2:7/0/custom_data_0 = true
3:7/0 = 0
3:7/0/custom_data_0 = true
4:7/0 = 0
4:7/0/custom_data_0 = true
5:7/0 = 0
5:7/0/custom_data_0 = true
6:7/0 = 0
6:7/0/custom_data_0 = true
7:7/0 = 0
7:7/0/custom_data_0 = true
8:7/0 = 0
8:7/0/custom_data_0 = true
9:7/0 = 0
9:7/0/custom_data_0 = true
10:7/0 = 0
10:7/0/custom_data_0 = true
11:7/0 = 0
11:7/0/custom_data_0 = true
12:7/0 = 0
12:7/0/custom_data_0 = true
13:7/0 = 0
13:7/0/custom_data_0 = true
14:7/0 = 0
14:7/0/custom_data_0 = true
15:7/0 = 0
15:7/0/custom_data_0 = true
0:8/0 = 0
0:8/0/custom_data_0 = true
1:8/0 = 0
1:8/0/custom_data_0 = true
2:8/0 = 0
2:8/0/custom_data_0 = true
3:8/0 = 0
3:8/0/custom_data_0 = true
4:8/0 = 0
4:8/0/custom_data_0 = true
5:8/0 = 0
5:8/0/custom_data_0 = true
6:8/0 = 0
6:8/0/custom_data_0 = true
7:8/0 = 0
7:8/0/custom_data_0 = true
8:8/0 = 0
8:8/0/custom_data_0 = true
9:8/0 = 0
9:8/0/custom_data_0 = true
10:8/0 = 0
10:8/0/custom_data_0 = true
11:8/0 = 0
11:8/0/custom_data_0 = true
12:8/0 = 0
12:8/0/custom_data_0 = true
13:8/0 = 0
13:8/0/custom_data_0 = true
14:8/0 = 0
14:8/0/custom_data_0 = true
15:8/0 = 0
15:8/0/custom_data_0 = true
0:9/0 = 0
0:9/0/custom_data_0 = true
1:9/0 = 0
1:9/0/custom_data_0 = true
2:9/0 = 0
2:9/0/custom_data_0 = true
3:9/0 = 0
3:9/0/custom_data_0 = true
4:9/0 = 0
4:9/0/custom_data_0 = true
5:9/0 = 0
5:9/0/custom_data_0 = true
6:9/0 = 0
6:9/0/custom_data_0 = true
7:9/0 = 0
7:9/0/custom_data_0 = true
8:9/0 = 0
8:9/0/custom_data_0 = true
9:9/0 = 0
9:9/0/custom_data_0 = true
10:9/0 = 0
10:9/0/custom_data_0 = true
11:9/0 = 0
11:9/0/custom_data_0 = true
12:9/0 = 0
12:9/0/custom_data_0 = true
13:9/0 = 0
13:9/0/custom_data_0 = true
14:9/0 = 0
14:9/0/custom_data_0 = true
15:9/0 = 0
15:9/0/custom_data_0 = true
0:10/0 = 0
0:10/0/custom_data_0 = true
1:10/0 = 0
1:10/0/custom_data_0 = true
2:10/0 = 0
2:10/0/custom_data_0 = true
3:10/0 = 0
3:10/0/custom_data_0 = true
4:10/0 = 0
4:10/0/custom_data_0 = true
5:10/0 = 0
5:10/0/custom_data_0 = true
6:10/0 = 0
6:10/0/custom_data_0 = true
7:10/0 = 0
7:10/0/custom_data_0 = true
8:10/0 = 0
8:10/0/custom_data_0 = true
9:10/0 = 0
9:10/0/custom_data_0 = true
10:10/0 = 0
10:10/0/custom_data_0 = true
11:10/0 = 0
11:10/0/custom_data_0 = true
12:10/0 = 0
12:10/0/custom_data_0 = true
13:10/0 = 0
13:10/0/custom_data_0 = true
14:10/0 = 0
14:10/0/custom_data_0 = true
15:10/0 = 0
15:10/0/custom_data_0 = true
0:11/0 = 0
0:11/0/custom_data_0 = true
1:11/0 = 0
1:11/0/custom_data_0 = true
2:11/0 = 0
2:11/0/custom_data_0 = true
3:11/0 = 0
3:11/0/custom_data_0 = true
4:11/0 = 0
4:11/0/custom_data_0 = true
5:11/0 = 0
5:11/0/custom_data_0 = true
6:11/0 = 0
6:11/0/custom_data_0 = true
7:11/0 = 0
7:11/0/custom_data_0 = true
8:11/0 = 0
8:11/0/custom_data_0 = true
9:11/0 = 0
9:11/0/custom_data_0 = true
10:11/0 = 0
10:11/0/custom_data_0 = true
11:11/0 = 0
11:11/0/custom_data_0 = true
12:11/0 = 0
12:11/0/custom_data_0 = true
13:11/0 = 0
13:11/0/custom_data_0 = true
14:11/0 = 0
14:11/0/custom_data_0 = true
15:11/0 = 0
15:11/0/custom_data_0 = true
0:12/0 = 0
0:12/0/custom_data_0 = true
1:12/0 = 0
1:12/0/custom_data_0 = true
2:12/0 = 0
2:12/0/custom_data_0 = true
3:12/0 = 0
3:12/0/custom_data_0 = true
4:12/0 = 0
4:12/0/custom_data_0 = true
5:12/0 = 0
5:12/0/custom_data_0 = true
6:12/0 = 0
6:12/0/custom_data_0 = true
7:12/0 = 0
7:12/0/custom_data_0 = true
8:12/0 = 0
8:12/0/custom_data_0 = true
9:12/0 = 0
9:12/0/custom_data_0 = true
10:12/0 = 0
10:12/0/custom_data_0 = true
11:12/0 = 0
11:12/0/custom_data_0 = true
12:12/0 = 0
12:12/0/custom_data_0 = true
13:12/0 = 0
13:12/0/custom_data_0 = true
14:12/0 = 0
14:12/0/custom_data_0 = true
15:12/0 = 0
15:12/0/custom_data_0 = true
0:13/0 = 0
0:13/0/custom_data_0 = true
1:13/0 = 0
1:13/0/custom_data_0 = true
2:13/0 = 0
2:13/0/custom_data_0 = true
3:13/0 = 0
3:13/0/custom_data_0 = true
4:13/0 = 0
4:13/0/custom_data_0 = true
5:13/0 = 0
5:13/0/custom_data_0 = true
6:13/0 = 0
6:13/0/custom_data_0 = true
7:13/0 = 0
7:13/0/custom_data_0 = true
8:13/0 = 0
8:13/0/custom_data_0 = true
9:13/0 = 0
9:13/0/custom_data_0 = true
10:13/0 = 0
10:13/0/custom_data_0 = true
11:13/0 = 0
11:13/0/custom_data_0 = true
12:13/0 = 0
12:13/0/custom_data_0 = true
13:13/0 = 0
13:13/0/custom_data_0 = true
14:13/0 = 0
14:13/0/custom_data_0 = true
15:13/0 = 0
15:13/0/custom_data_0 = true
0:14/0 = 0
0:14/0/custom_data_0 = true
1:14/0 = 0
1:14/0/custom_data_0 = true
2:14/0 = 0
2:14/0/custom_data_0 = true
3:14/0 = 0
3:14/0/custom_data_0 = true
4:14/0 = 0
4:14/0/custom_data_0 = true
5:14/0 = 0
5:14/0/custom_data_0 = true
6:14/0 = 0
6:14/0/custom_data_0 = true
7:14/0 = 0
7:14/0/custom_data_0 = true
8:14/0 = 0
8:14/0/custom_data_0 = true
9:14/0 = 0
9:14/0/custom_data_0 = true
10:14/0 = 0
10:14/0/custom_data_0 = true
11:14/0 = 0
11:14/0/custom_data_0 = true
12:14/0 = 0
12:14/0/custom_data_0 = true
13:14/0 = 0
13:14/0/custom_data_0 = true
14:14/0 = 0
14:14/0/custom_data_0 = true
15:14/0 = 0
15:14/0/custom_data_0 = true
0:15/0 = 0
0:15/0/custom_data_0 = true
1:15/0 = 0
1:15/0/custom_data_0 = true
2:15/0 = 0
2:15/0/custom_data_0 = true
3:15/0 = 0
3:15/0/custom_data_0 = true
4:15/0 = 0
4:15/0/custom_data_0 = true
5:15/0 = 0
5:15/0/custom_data_0 = true
6:15/0 = 0
6:15/0/custom_data_0 = true
7:15/0 = 0
7:15/0/custom_data_0 = true
8:15/0 = 0
8:15/0/custom_data_0 = true
9:15/0 = 0
9:15/0/custom_data_0 = true
10:15/0 = 0
10:15/0/custom_data_0 = true
11:15/0 = 0
11:15/0/custom_data_0 = true
12:15/0 = 0
12:15/0/custom_data_0 = true
13:15/0 = 0
13:15/0/custom_data_0 = true
14:15/0 = 0
14:15/0/custom_data_0 = true
15:15/0 = 0
15:15/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qcekg"]
texture = ExtResource("4_ru0v0")
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
21:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
2:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
18:3/0 = 0
21:3/0 = 0
2:4/0 = 0
7:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
21:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
2:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
21:5/0 = 0
24:5/0 = 0
27:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
9:6/0 = 0
16:6/0 = 0
18:6/0 = 0
21:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
16:7/0 = 0
18:7/0 = 0
21:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
12:12/0 = 0
13:12/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
12:13/0 = 0
13:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
12:14/0 = 0
13:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
12:15/0 = 0
13:15/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_141pg"]
texture = ExtResource("5_42mxi")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a0ytw"]
texture = ExtResource("6_imvg7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/modulate = Color(1, 0.51, 0.51, 1)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/modulate = Color(1, 0.51, 0.51, 1)
3:3/0 = 0
3:3/0/modulate = Color(1, 0.51, 0.51, 1)
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ivcak"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_fwg0k")
sources/1 = SubResource("TileSetAtlasSource_qcekg")
sources/2 = SubResource("TileSetAtlasSource_141pg")
sources/3 = SubResource("TileSetAtlasSource_a0ytw")

[node name="World" type="Node2D"]

[node name="UserInterface" parent="." instance=ExtResource("2_alos7")]
unique_name_in_owner = true

[node name="Environment" type="Node2D" parent="."]

[node name="Layer0" type="TileMapLayer" parent="Environment"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAALAAYAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAALAAYAAAABAAIAAAALAAYAAAABAAMAAAALAAYAAAABAAQAAAALAAYAAAABAAUAAAALAAYAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAACAAAAAAALAAYAAAACAAEAAAALAAYAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAQALAAUAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAALAAYAAAADAAMAAAAAAAAAAAADAAQAAAALAAYAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAAAAAALAAYAAAAEAAEAAAALAAYAAAAEAAIAAAALAAYAAAAEAAMAAAALAAYAAAAEAAQAAAALAAYAAAAEAAUAAAACAAEAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAACAAEAAAAFAAYAAAAAAAAAAAAFAAcAAAAGAAwAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAACAAkAAAAGAAcAAQALAAUAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAOAAkAAAAHAAcAAAAAAAsAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAACAAkAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAsAAAABAA0AAAAOAAkAAAABAA4AAAAOAAkAAAABAA8AAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAQALAAUAAAACAAsAAAAAAAsAAAACAAwAAAAGAAwAAAACAA0AAAAOAAkAAAACAA4AAAAOAAkAAAACAA8AAAAOAAkAAAADAAgAAAAAAAAAAAADAAkAAAAOAAkAAAADAAoAAAAAAAsAAAADAAsAAAAGAAwAAAADAAwAAAAAAAsAAAADAA0AAAAAAAsAAAADAA4AAAAAAAsAAAADAA8AAAAOAAkAAAAEAAgAAAAGAAwAAAAEAAkAAAAAAAsAAAAEAAoAAAAOAAkAAAAEAAsAAAAAAAsAAAAEAAwAAAAOAAkAAAAEAA0AAAACAAkAAAAEAA4AAAAOAAkAAAAEAA8AAAAAAAsAAAAFAAgAAAAAAAsAAAAFAAkAAAACAAkAAAAFAAoAAAAAAAsAAAAFAAsAAAAOAAkAAAAFAAwAAAAOAAkAAAAFAA0AAAAOAAkAAAAFAA4AAAAAAAsAAAAFAA8AAQALAAUAAAAGAAgAAAACAAkAAAAGAAkAAAAOAAkAAAAGAAoAAAAAAAsAAAAGAAsAAAAAAAsAAAAGAAwAAAAAAAsAAAAGAA0AAAAAAAsAAAAGAA4AAAAGAAwAAAAGAA8AAAAAAAAAAAAHAAgAAAAAAAsAAAAHAAkAAAAAAAsAAAAHAAoAAAAOAAkAAAAHAAsAAAAGAAwAAAAHAAwAAAAOAAkAAAAHAA0AAAAGAAwAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAOAAkAAAAIAAYAAAACAAkAAAAIAAcAAAAGAAwAAAAIAAgAAAAAAAsAAAAIAAkAAAAOAAkAAAAIAAoAAAAGAAwAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAsAAAAJAAIAAAAGAAwAAAAJAAMAAAAGAAwAAAAJAAQAAQALAAUAAAAJAAUAAAAOAAkAAAAJAAYAAAAAAAsAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAsAAAAJAAkAAAAGAAwAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAAAAAAAAAAsAAAAKAAEAAAAAAAsAAAAKAAIAAAAAAAsAAAAKAAMAAAAOAAkAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAsAAAAKAAYAAAAGAAwAAAAKAAcAAAAOAAkAAAAKAAgAAAAGAAwAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAPAAcAAAAKAA0AAAAPAAcAAAAKAA4AAAAPAAcAAAAKAA8AAAAAAAAAAAALAAAAAAAOAAkAAAALAAEAAAAAAAsAAAALAAIAAAAOAAkAAAALAAMAAAAAAAsAAAALAAQAAAACAAkAAAALAAUAAAACAAkAAAALAAYAAAAGAAwAAAALAAcAAAAOAAkAAAALAAgAAQALAAUAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAPAAcAAAALAAwAAAAAAAAAAAALAA0AAAAPAAcAAAALAA4AAAAPAAcAAAALAA8AAAAAAAAAAAAMAAAAAAAAAAsAAAAMAAEAAAAAAAsAAAAMAAIAAAACAAkAAAAMAAMAAAACAAkAAAAMAAQAAAAOAAkAAAAMAAUAAAAOAAkAAAAMAAYAAAAOAAkAAAAMAAcAAAAOAAkAAAAMAAgAAAAOAAkAAAAMAAkAAAAAAAAAAAAMAAoAAAAPAAcAAAAMAAsAAAAAAAAAAAAMAAwAAQALAAUAAAAMAA0AAAAPAAcAAAAMAA4AAAAPAAcAAAAMAA8AAAAAAAAAAAANAAAAAAAAAAsAAAANAAEAAAAAAAsAAAANAAIAAAAAAAsAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAOAAkAAAANAAkAAAAOAAkAAAANAAoAAAAAAAAAAAANAAsAAAAPAAcAAAANAAwAAAAPAAcAAAANAA0AAAAAAAAAAAANAA4AAAAPAAcAAAANAA8AAAAPAAcAAAAOAAAAAAAAAAsAAAAOAAEAAAAAAAsAAAAOAAIAAAAAAAsAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAQALAAUAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAPAAcAAAAOAA0AAAAPAAcAAAAOAA4AAAAPAAcAAAAOAA8AAAAAAAAAAAAPAAAAAAAAAAsAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAIAA8AAQALAAUAAAA=")
tile_set = SubResource("TileSet_ivcak")
script = ExtResource("7_ufyxm")

[node name="Map2" type="TileMapLayer" parent="Environment"]
visible = false
use_parent_material = true
position = Vector2(160, -255)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAIAAcAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAcAAAAAAAQAAAAAAAAAAAAAAAUAAAAIAAcAAAAAAAYAAAAAAAAAAAAAAAcAAAAGAAYAAAABAAAAAAAAAAAAAAABAAEAAAAIAAcAAAABAAIAAAAGAAYAAAABAAMAAAAIAAcAAAABAAQAAAAGAAYAAAABAAUAAAAIAAcAAAABAAYAAAAGAAYAAAABAAcAAAAGAAYAAAACAAAAAAAGAAYAAAACAAEAAAAIAAcAAAACAAIAAAAHAAYAAAACAAMAAAAIAAcAAAACAAQAAAAIAAcAAAACAAUAAAAIAAcAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAHAAYAAAADAAIAAAAGAAYAAAADAAMAAAAHAAYAAAADAAQAAAAGAAYAAAADAAUAAAAAAAAAAAADAAYAAQAFABIAAAADAAcAAQAFABIAAAAEAAAAAAAGAAYAAAAEAAEAAAAHAAYAAAAEAAIAAAAGAAYAAAAEAAMAAAAGAAYAAAAEAAQAAAAGAAYAAAAEAAUAAQAFABIAAAAEAAYAAQAFABIAAAAEAAcAAQAFABMAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAQAFABIAAAAFAAYAAQAFABMAAAAFAAcAAAAGAAwAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAQAEABQAAAAGAAYAAAACAAkAAAAGAAcAAAAOAAkAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAQAFABMAAAAHAAUAAQAFABQAAAAHAAYAAAAOAAkAAAAHAAcAAAAAAAsAAAAAAAgAAAAGAAYAAAAAAAkAAAAGAAYAAAAAAAoAAAAAAAAAAAAAAAsAAAAKAAYAAAAAAAwAAAAKAAcAAAAAAA0AAAAFAAcAAAAAAA4AAAAFAAcAAAAAAA8AAAAFAAcAAAABAAgAAAAAAAAAAAABAAkAAAAGAAYAAAABAAoAAAAAAAAAAAABAAsAAAALAAYAAAABAAwAAAALAAcAAAABAA0AAQACABUAAAABAA4AAQAJABIAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAKAAgAAAACAAsAAAAKAAgAAAACAAwAAQADABQAAAACAA0AAQADABUAAAACAA4AAAAOAAkAAAACAA8AAAAOAAkAAAADAAgAAQAFABMAAAADAAkAAQAEABMAAAADAAoAAQAEABMAAAADAAsAAQAEABMAAAADAAwAAQAEABQAAAADAA0AAAAAAAsAAAADAA4AAAAAAAsAAAADAA8AAAAOAAkAAAAEAAgAAAAGAAwAAAAEAAkAAAAAAAsAAAAEAAoAAAAOAAkAAAAEAAsAAAAAAAsAAAAEAAwAAAAOAAkAAAAEAA0AAAACAAkAAAAEAA4AAAAOAAkAAAAEAA8AAAAAAAsAAAAFAAgAAAAAAAsAAAAFAAkAAAACAAkAAAAFAAoAAAAAAAsAAAAFAAsAAAAOAAkAAAAFAAwAAAAOAAkAAAAFAA0AAAAOAAkAAAAFAA4AAAAAAAsAAAAFAA8AAAADAAsAAAAGAAgAAAACAAkAAAAGAAkAAAAOAAkAAAAGAAoAAAAAAAsAAAAGAAsAAAAAAAsAAAAGAAwAAAAAAAsAAAAGAA0AAAAAAAsAAAAGAA4AAAAGAAwAAAAGAA8AAQADABIAAAAHAAgAAAAAAAsAAAAHAAkAAAAAAAsAAAAHAAoAAAAOAAkAAAAHAAsAAAAGAAwAAAAHAAwAAAAOAAkAAAAHAA0AAAAGAAwAAAAHAA4AAQAEABUAAAAHAA8AAQAEABIAAAAIAAAAAAALAAcAAAAIAAEAAAALAAcAAAAIAAIAAAALAAcAAAAIAAMAAQADABIAAAAIAAQAAQAFABMAAAAIAAUAAAAOAAkAAAAIAAYAAAACAAkAAAAIAAcAAAAGAAwAAAAIAAgAAAAAAAsAAAAIAAkAAAAOAAkAAAAIAAoAAAAGAAwAAAAIAAsAAQAFABMAAAAIAAwAAQAFABQAAAAIAA0AAQAFABQAAAAIAA4AAQAFABUAAAAIAA8AAAAGAAYAAAAJAAAAAAAHAAcAAAAJAAEAAAALAAcAAAAJAAIAAAAHAAcAAAAJAAMAAQADABIAAAAJAAQAAAACAAoAAAAJAAUAAAAOAAkAAAAJAAYAAAAAAAsAAAAJAAcAAAAAAAsAAAAJAAgAAAAAAAsAAAAJAAkAAAAGAAwAAAAJAAoAAQADABQAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAAAAAAALAAcAAAAKAAEAAAALAAcAAAAKAAIAAAALAAcAAAAKAAMAAQADABIAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAsAAAAKAAYAAAAGAAwAAAAKAAcAAAAOAAkAAAAKAAgAAAAGAAwAAAAKAAkAAQAEABMAAAAKAAoAAQAEABQAAAAKAAsAAAAGAAYAAAAKAAwAAAAGAAYAAAAKAA0AAAAPAAcAAAAKAA4AAAAPAAcAAAAKAA8AAAAAAAAAAAALAAAAAAAHAAcAAAALAAEAAAAHAAcAAAALAAIAAAAHAAcAAAALAAMAAQADABIAAAALAAQAAAACAAkAAAALAAUAAAACAAkAAAALAAYAAAAGAAwAAAALAAcAAAAAAAoAAAALAAgAAQAIABMAAAALAAkAAQADABMAAAALAAoAAAAGAAYAAAALAAsAAAAGAAYAAAALAAwAAAAAAAAAAAALAA0AAAAPAAcAAAALAA4AAAAPAAcAAAALAA8AAAAAAAAAAAAMAAAAAAAGAAYAAAAMAAEAAAAHAAYAAAAMAAIAAAAGAAYAAAAMAAMAAQADABIAAAAMAAQAAAAAAAoAAAAMAAUAAAAAAAoAAAAMAAYAAAAAAAoAAAAMAAcAAAAAAAoAAAAMAAgAAQAJABMAAAAMAAkAAAAAAAAAAAAMAAoAAAAGAAYAAAAMAAsAAAAAAAAAAAAMAAwAAAAHAAYAAAAMAA0AAAAPAAcAAAAMAA4AAAAPAAcAAAAMAA8AAAAAAAAAAAANAAAAAAAGAAYAAAANAAEAAAAHAAYAAAANAAIAAAAGAAYAAAANAAMAAQADABIAAAANAAQAAAAAAAoAAAANAAUAAAAAAAoAAAANAAYAAAAAAAoAAAANAAcAAAAAAAoAAAANAAgAAQAFABIAAAANAAkAAAAHAAYAAAANAAoAAAAAAAAAAAANAAsAAAAPAAcAAAANAAwAAAAPAAcAAAANAA0AAAAAAAAAAAANAA4AAAAPAAcAAAANAA8AAAAPAAcAAAAOAAAAAAAGAAYAAAAOAAEAAAAGAAYAAAAOAAIAAAAGAAYAAAAOAAMAAQADABIAAAAOAAQAAAAAAAoAAAAOAAUAAAAAAAoAAAAOAAYAAAAAAAoAAAAOAAcAAAAAAAoAAAAOAAgAAQAEABIAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAPAAcAAAAOAA0AAAAPAAcAAAAOAA4AAAAPAAcAAAAOAA8AAAAAAAAAAAAPAAAAAAAGAAYAAAAPAAEAAAAGAAYAAAAPAAIAAAAGAAYAAAAPAAMAAQADABIAAAAPAAQAAAACAAwAAAAPAAUAAAACAAwAAAAPAAYAAAABAAsAAAAPAAcAAAAAAA0AAAAPAAgAAQAFABIAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAABAA8AAQAJABIAAAA=")
tile_set = SubResource("TileSet_ivcak")

[node name="Layer1" type="TileMapLayer" parent="Environment"]
use_parent_material = true
tile_set = SubResource("TileSet_ivcak")

[node name="OverviewCamera" parent="Environment" instance=ExtResource("8_2nhjv")]

[node name="Combatants" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="Combatants"]
script = ExtResource("9_33mdl")

[node name="Enemy" type="Node2D" parent="Combatants"]
script = ExtResource("10_ewhdh")

[node name="Services" type="Node" parent="."]

[node name="TurnQueue" type="Node" parent="Services"]
script = ExtResource("11_uiy7v")

[connection signal="switch_mode" from="UserInterface" to="Services/TurnQueue" method="_change_active_char_mode"]
[connection signal="ui_element_mouse_entered" from="UserInterface" to="Environment/Layer0" method="_on_ui_element_mouse_entered"]
[connection signal="ui_element_mouse_exited" from="UserInterface" to="Environment/Layer0" method="_on_ui_element_mouse_exited"]
[connection signal="active_character" from="Services/TurnQueue" to="UserInterface" method="_get_active_char"]
[connection signal="turn_info" from="Services/TurnQueue" to="UserInterface" method="_on_turn_info"]
